--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="signin.html">
                         <i class="d-block text-center fas fa-sign-out-alt "></i>
                         <span>Log Out</span>
                     </a>
@@ -229,7 +229,7 @@
                                 </div>
                                 <div class="product-body">
                                     <p class="product-category">Category</p>
-                                    <h3 class="product-name"><a href="#">product name</a></h3>
+                                    <h3 class="product-name"><a href="book.html">product name</a></h3>
                                     <h4 class="product-price">$59.00</h4>
                                 </div>
                             </div>
@@ -413,7 +413,7 @@
                             <ul class="footer-links">
                                 <li><a href="#">My Account</a></li>
                                 <li><a href="#">View Cart</a></li>
-                                <li><a href="#">Help</a></li>
+                                <li><a href="error.html">Help</a></li>
                             </ul>
                         </div>
                     </div>
