--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="signin.html">
                         <i class="d-block text-center fas fa-user "></i>
                         <span>My Account</span>
                     </a>
@@ -243,7 +243,7 @@
                                 </div>
                                 <div class="product-body">
                                     <p class="product-category">Category</p>
-                                    <h3 class="product-name"><a href="#">product name</a></h3>
+                                    <h3 class="product-name"><a href="book.html">product name</a></h3>
                                     <h4 class="product-price">$59.00</h4>
                                 </div>
                             </div>
