--- a/signin.html
+++ b/signin.html
@@ -21,11 +21,11 @@
         <input type="email" id="inputEmail" class="form-control inpt" placeholder="Email address" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control inpt" placeholder="Password" required>
-        <select class="custom-select inpt" id="inputGroupSelect01">
+        <!-- <select class="custom-select inpt" id="inputGroupSelect01">
           <option selected>account type</option>
           <option value="1">customer</option>
           <option value="2">puplisher</option>
-        </select>
+        </select> -->
         <div class="checkbox mb-3 ">
           <label>
             <input type="checkbox" class="inpt" value="remember-me"> Remember me
