--- a/signup.html
+++ b/signup.html
@@ -40,11 +40,11 @@
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control inpt" placeholder="Password" required>
         <br>
-        <select class="custom-select inpt" id="inputGroupSelect01">
+        <!-- <select class="custom-select inpt" id="inputGroupSelect01">
           <option selected>account type</option>
           <option value="1">customer</option>
           <option value="2">puplisher</option>
-        </select>
+        </select> -->
         <br> <br>
         <div class="row">
           <div class="col">
@@ -56,32 +56,32 @@
           <div class="col mb-3">
             <select class="custom-select inpt" id="validationCustom04" required>
               <option selected disabled value="">Govern</option>
-              <option>Alexandria</option>
-              <option>Aswan</option>
-              <option>Asyut </option>
-              <option>Beheira</option>
-              <option>Beni Suef</option>
-              <option>Cairo</option>
-              <option>Dakahlia</option>
-              <option>Damietta</option>
-              <option>Faiyum</option>
-              <option>Gharbia</option>
-              <option>Giza</option>
-              <option>Ismailia </option>
-              <option>Kafr El Sheikh </option>
-              <option>Luxor</option>
-              <option>Matruh</option>
-              <option>Minya</option>
-              <option>Monufia</option>
-              <option>New Valley</option>
-              <option>Port Said</option>
-              <option>Qalyubia</option>
-              <option>Qena</option>
-              <option>Red Sea</option>
-              <option>Sharqia</option>
-              <option>Sohag</option>
-              <option>South Sinai</option>
-              <option>Suez</option>
+              <option value="alx">Alexandria</option>
+              <option value="asn">Aswan</option>
+              <option value="ast">Asyut </option>
+              <option value="bhr">Beheira</option>
+              <option value="bns">Beni Suef</option>
+              <option value="cir">Cairo</option>
+              <option value="dkl">Dakahlia</option>
+              <option value="dmt">Damietta</option>
+              <option value="fym">Faiyum</option>
+              <option value="grb">Gharbia</option>
+              <option value="gza">Giza</option>
+              <option value="ism">Ismailia </option>
+              <option value="kes">Kafr El Sheikh </option>
+              <option value="lux">Luxor</option>
+              <option value="mat">Matruh</option>
+              <option value="mny">Minya</option>
+              <option value="mnf">Monufia</option>
+              <option value="nvl">New Valley</option>
+              <option value="prs">Port Said</option>
+              <option value="qlb">Qalyubia</option>
+              <option value="qna">Qena</option>
+              <option value="rse">Red Sea</option>
+              <option value="srq">Sharqia</option>
+              <option value="shg">Sohag</option>
+              <option value="sna">South Sinai</option>
+              <option value="suz">Suez</option>
   
           </select>
             <div class="invalid-feedback">
