--- a/book.html
+++ b/book.html
@@ -73,10 +73,10 @@
     <div class="container">
         <div class="row">
            <div id="bkImg" class="col mt-5">
-             <img src="https://image.freepik.com/free-psd/realistic-book-cover-presentation_1310-24.jpg" class="img-fluid img-thumbnail" alt="book_Image">
+             <img src="https://image.freepik.com/free-psd/realistic-book-cover-presentation_1310-24.jpg" class="img-fluid sz float-right  img-thumbnail" alt="book_Image">
            </div>
-           <div id="bkInfo" class="col-ms mt-5">
-             <table class="m-5">
+           <div id="bkInfo" class="col mt-5 divclr">
+             <table class="m-5 row">
                <tbody>
                    <tr>
                        <td><i class="fas fa-pen-nib"></i><strong> Author:</strong></td>
@@ -126,20 +126,99 @@
                    </tr>
                </tbody>
              </table>
-           </div>
-         </div>
-         <div id="bkDescription"  class="row m-5 disc rounded-pill border border-dark   p-5 ml-0   "> 
-           <p>
-             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis ab veniam ea sed natus fuga. Possimus enim suscipit eos, adipisci et, nihil deleniti vitae non distinctio quibusdam, velit provident error.
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem ad animi dolorem, quisquam molestias quo, at, dicta qui corrupti ratione consequuntur culpa. Repellat hic optio ipsum, dolores voluptatem iusto omnis.
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo autem quaerat, odit perspiciatis eligendi accusamus provident similique quidem vero placeat, eum delectus dolorem esse quibusdam sapiente commodi id quam animi.
-           </p>
-         </div>
-         <div id="bkbuy" class="row mb-5">
-           <a href="#!" class="p-2 m-5 btn btn-lg text-white btn1"  role="button"> <i class="fas fa-arrow-alt-circle-left"></i> previous</a>
-           <a href="#!" class="p-2 btn m-5 btn-lg  btn1 text-white"  role="button"><i class="fas fa-cart-arrow-down"></i> add to cart</a>
-         </div>
-      </div>
+             <div id="bkDescription"  class="row m-5 disc divclr border    p-5 ml-0   "> 
+                 <p>
+                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis ab veniam ea sed natus fuga. Possimus enim suscipit eos, adipisci et, nihil deleniti vitae non distinctio quibusdam, velit provident error.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div id="bkbuy" style="padding-left: 25%;" class="row m3-3 mb-5">
+        <a href="#!" class="p-2 m-5 btn btn-lg text-white btn1"  role="button"> <i class="fas fa-arrow-alt-circle-left"></i> previous</a>
+        <a href="#!" class="p-2 btn m-5 btn-lg  btn1 text-white"  role="button"><i class="fas fa-cart-arrow-down"></i> add to cart</a>
+        </div>
+        <div id="carouselExampleIndicators" class="carousel  slide row pb-5 divclr hh mb-2" data-ride="carousel">
+            <h1 class="text-center"> <b> books u may like </b> published by : publisher_name</h1>
+
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                <img class="d-block w-100 slider" src="https://www.pinclipart.com/picdir/middle/43-430438_vertical-book-plain-seattle-clipart.png" alt="First slide">               
+                <div class="carousel-caption d-none d-md-block">
+                    <a href="#"><h5>BOOK_NAME</h5></a>
+                    <p>info</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 slider" src="https://i.dlpng.com/static/png/6926975_preview.png" alt="First slide">
+                    <div class="carousel-caption d-none d-md-block">
+                    <a href="#!"><h5>BOOK_NAME</h5></a>
+                    <p>info</p>
+                </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 pb-5 slider" src="https://www.pngkey.com/png/full/688-6888695_plain-book-cover-png-clipart-hardcover-book-covers.png" alt="First slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <a href="#!"><h5>BOOK_NAME</h5></a>
+                        <p>info</p>
+                </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+        <div id="carouselExampleIndicators1" class="carousel slide row pb-5 divclr hh mb-5" data-ride="carousel1">
+            <h1 class="text-center pl-5"> <b> books u may like with same category </b></h1>
+
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                <img class="d-block w-100 slider" src="https://www.pinclipart.com/picdir/middle/43-430438_vertical-book-plain-seattle-clipart.png" alt="First slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <a href="#"><h5>BOOK_NAME</h5></a>
+                    <p>info</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 slider" src="https://i.dlpng.com/static/png/6926975_preview.png" alt="First slide">
+                    <div class="carousel-caption d-none d-md-block">
+                    <a href="#"><h5>BOOK_NAME</h5></a>
+                    <p>info</p>
+                </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 pb-5 slider" src="https://www.pngkey.com/png/full/688-6888695_plain-book-cover-png-clipart-hardcover-book-covers.png" alt="First slide">
+                    <div class="carousel-caption d-none d-md-block">
+                    <a href="#"><h5>BOOK_NAME</h5></a>
+                    <p>info</p>
+                </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators1" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators1" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+        
+    </div>
     <!-- booksection/ -->
     <!-- FOOTER -->
     <footer id="footer">
