--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
             <!-- NAVS -->
             <ul class="navbar-nav col-lg-3 mt-4 mt-lg-3 justify-content-center text-center">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="/mycart.html">
                         <i class="d-block text-center fas fa-shopping-cart "></i>
                         <span>My Cart</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="signin.html">
+                    <a class="nav-link" href="#">
                         <i class="d-block text-center fas fa-user "></i>
                         <span>My Account</span>
                     </a>
@@ -229,7 +229,7 @@
                                 </div>
                                 <div class="product-body">
                                     <p class="product-category">Category</p>
-                                    <h3 class="product-name"><a href="book.html">product name</a></h3>
+                                    <h3 class="product-name"><a href="book_profile.html">product name</a></h3>
                                     <h4 class="product-price">$59.00</h4>
                                 </div>
                             </div>
@@ -243,7 +243,7 @@
                                 </div>
                                 <div class="product-body">
                                     <p class="product-category">Category</p>
-                                    <h3 class="product-name"><a href="book.html">product name</a></h3>
+                                    <h3 class="product-name"><a href="book_profile.html">product name</a></h3>
                                     <h4 class="product-price">$59.00</h4>
                                 </div>
                             </div>
@@ -257,7 +257,7 @@
                                 </div>
                                 <div class="product-body">
                                     <p class="product-category">Category</p>
-                                    <h3 class="product-name"><a href="#">product name</a></h3>
+                                    <h3 class="product-name"><a href="book_profile.html">product name</a></h3>
                                     <h4 class="product-price">$59.00</h4>
                                 </div>
                             </div>
@@ -411,8 +411,8 @@
                         <div class="footer">
                             <h3 class="footer-title">Service</h3>
                             <ul class="footer-links">
-                                <li><a href="#">My Account</a></li>
-                                <li><a href="#">View Cart</a></li>
+                                <li><a href="error.html">My Account</a></li>
+                                <li><a href="error.html">View Cart</a></li>
                                 <li><a href="error.html">Help</a></li>
                             </ul>
                         </div>
