--- a/book.html
+++ b/book.html
@@ -70,13 +70,13 @@
     </nav>
     <!-- /NAVBAR -->
     <!-- booksection -->
-    <div class="container">
+    <div class="container divclr">
         <div class="row">
            <div id="bkImg" class="col mt-5">
              <img src="https://image.freepik.com/free-psd/realistic-book-cover-presentation_1310-24.jpg" class="img-fluid sz float-right  img-thumbnail" alt="book_Image">
            </div>
            <div id="bkInfo" class="col mt-5 divclr">
-             <table class="m-5 row">
+             <table class="m-5 row divclr">
                <tbody>
                    <tr>
                        <td><i class="fas fa-pen-nib"></i><strong> Author:</strong></td>
