--- a/book_profile.html
+++ b/book_profile.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/nouislider.min.css" />
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/style.css" />
-      <link rel="stylesheet" href="css/sin.css" >
+    <link rel="stylesheet" href="css/sin.css" >
     <link rel="stylesheet" href="css/book_profile.css">
     <link rel="stylesheet" type="text/css" href="./slick/slick.css">
     <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css">
@@ -23,6 +23,7 @@
 
     .slider {
         width: 50%;
+
         margin: 100px;
     }
 
@@ -110,7 +111,7 @@
     <!-- /NAVBAR -->
 
     <!-- BookPage section -->
-    <div class="container my-5">
+    <div class="container my-5 ">
         <div class="row">
             <!-- Book img -->
             <div class="col-12 col-lg-3">
@@ -122,34 +123,36 @@
                 </div>
             </div>
             <!-- Book Details -->
-            <div class="col-12 col-lg-9 p-5 text-center text-lg-left">
+            <div class="col-12 col-lg-9 p-5 text-center divclr text-lg-left">
                 <h4 class="mb-4">KINGDOM OF LIES</h4>
                 <table>
                     <tr>
                         <td class="field-title pr-3">Author:</td>
-                        <td>Adrian M.Locas</td>
+                        <td class="p-2">Adrian M.Locas</td>
                     </tr>
                     <tr>
                         <td class="field-title pr-3">prince:</td>
-                        <td>20.35 $</td>
+                        <td class="p-2">20.35 $</td>
                     </tr>
                     <tr>
                         <td class="field-title pr-3">stock:</td>
-                        <td>5</td>
+                        <td class="p-2">5</td>
                     </tr>
                     <tr>
                         <td class="field-title pr-3">adress:</td>
-                        <td>losangelos</td>
+                        <td class="p-2">losangelos</td>
                     </tr>
                     <tr>
                         <td class="field-title pr-3">owner:</td>
-                        <td>jhon william</td>
+                        <td class="p-2">jhon william</td>
                     </tr>
                     <tr>
-                        <td class="field-title pr-3">discribtion:</td>
-                         <td class="p-5">
-                             <p>
-                                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis ab veniam ea sed natus fuga. Possimus enim suscipit eos, adipisci et, nihil deleniti vitae non distinctio quibusdam, velit provident error.
+                        <td class="field-title pr-3"> discribtion:</td>
+                         <td class="p-2">
+                             <p class="pr-2"> 
+                                 <b >
+                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis ab veniam ea sed natus fuga. Possimus enim suscipit eos, adipisci et, nihil deleniti vitae non distinctio quibusdam, velit provident error.
+                                 </b>
                             </p>
 
                          </td>
@@ -158,13 +161,13 @@
                     </tr>
                 </table>
                 <div class="mt-4">
-                    <button class="book-btn"><i class="fas fa-shopping-cart"></i> Add to cart</button>
-                    <button class="book-btn">view cart</button>
+                    <button class="book-btn mr-2"><i class="fas fa-shopping-cart"></i> Add to cart</button>
+                    <button class="book-btn  ml-2">view cart</button>
                 </div>
             </div>
             <div class="container">
-                <h4 class=" mb-4">published by : publisher_name</h4>
-                <section class="center slider p-5 inline-block">
+                <h4 class=" mb-4 mt-4">published by : publisher_name</h4>
+                <section class="center slider p-5 inline-block divclr2">
     
                     <div>
                         <a href="#"><img src="img\product01.png"></a>
@@ -199,8 +202,8 @@
             </div>
 
                 <div class="container">
-                    <h4 class="mb-4 ">SAME Category</h4>
-                <section class="center slider p-5 inline-block">
+                    <h4 class="mb-4 mt-4">SAME Category</h4>
+                <section class="center slider p-5 inline-block divclr2">
     
                     <div>
                         <a href="#"><img src="img\product01.png"></a>
@@ -333,7 +336,35 @@
             autoplay : true,
             focusOnSelect : true,
             mobileFirst : true ,
-            respondTo : 'min'
+            respondTo : 'min',
+            responsive :[
+    {
+      breakpoint: 1024,
+      settings: {
+        slidesToShow: 3,
+        slidesToScroll: 1,
+        infinite: true,
+        dots: true
+      }
+    },
+    {
+      breakpoint: 600,
+      settings: {
+        slidesToShow: 2,
+        slidesToScroll: 2
+      }
+    },
+    {
+      breakpoint: 480,
+      settings: {
+        slidesToShow: 1,
+        slidesToScroll: 1
+      }
+    }
+    // You can unslick at a given breakpoint now by adding:
+    // settings: "unslick"
+    // instead of a settings object
+  ]
 
 
         });
