--- a/book_profile.html
+++ b/book_profile.html
@@ -167,7 +167,7 @@
             </div>
             <div class="container">
                 <h4 class=" mb-4 mt-4">published by : publisher_name</h4>
-                <section class="center slider p-5 inline-block divclr2">
+                <section class="responsive">
     
                     <div>
                         <a href="#"><img src="img\product01.png"></a>
@@ -203,7 +203,7 @@
 
                 <div class="container">
                     <h4 class="mb-4 mt-4">SAME Category</h4>
-                <div class="responsive slider p-5 inline-block divclr2">
+                <div class="responsive">
     
                     <div>
                         <a href="#"><img src="img\product01.png"></a>
